--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>PurpleTerminal PRO</title>
+    <title>Violet | Wallet</title>
     <style>
         @font-face {
             font-family: 'Violet';
-            src: url('violet.ttf') format('truetype');
+            src: url('Violet.ttf') format('truetype');
         }
 
         * {
@@ -685,7 +685,7 @@
     </div>
 
     <div class="login-screen" id="login-screen">
-        <div class="login-title">PurpleTerminal PRO</div>
+        <div class="login-title">Violet | Wallet</div>
         <div class="login-buttons" id="login-buttons">
             <button class="login-btn" onclick="showScreen('services-screen')">
                 <i class="fas fa-list"></i> Услуги
@@ -702,7 +702,7 @@
     <div class="terminal" id="terminal">
         <div class="content-panel">
             <div class="header">
-                <div>PurpleTerminal</div>
+                <div>Violet | Wallet</div>
                 <div class="datetime" id="datetime">28.03.2024 14:30</div>
             </div>
             
@@ -1176,11 +1176,11 @@
                         <div class="card">
                             <div class="card-title">О терминале</div>
                             <p style="margin-bottom: 15px;">
-                                PurpleTerminal PRO - платежный терминал с удобным интерфейсом и множеством услуг.
+                                Violet - лучший кошелёк в 2025 Году! Эхх Киви как же нам без тебя...
                             </p>
                             <p>
-                                Версия: 3.1.0<br>
-                                Дата обновления: 28.03.2024
+                                Версия: 1.0<br>
+                                Дата обновления: 28.03.2025
                             </p>
                         </div>
                         
@@ -1196,7 +1196,7 @@
                                 <div class="service-icon">
                                     <i class="fas fa-envelope"></i>
                                 </div>
-                                <div class="service-name">support@purpleterminal.ru</div>
+                                <div class="service-name">support@violetnew.ru</div>
                             </div>
                         </div>
                     </div>
